--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./img/bilbo_background.svg');
+  background-image: url('./img/bilbo_background.jpg');
 }
 
 code {
