--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,27 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url(./img/bilbo_background.jpg);
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  font-family: 'Monotype Corsiva';
+  src: '../fonts/Mtcorsva.ttf';
   
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  font-family: 'Monotype Corsiva';
+  src: '../fonts/Mtcorsva.ttf';
+}
+
+input {  
+  font-family: 'Monotype Corsiva';
+  src: '../fonts/Mtcorsva.ttf';
 }
