--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,8 @@ body {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-  font-family: 'Monotype Corsiva';
+  font-family: 'Monotype Corsiva', 'Times New Roman', Times, serif;
   src: '../fonts/Mtcorsva.ttf';
-  
 }
 
 code {
