--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@ code {
 }
 
 button {
-  font-family: 'Monotype Corsiva';
+  font-family: 'Monotype Corsiva', 'Times New Roman', Times, serif;
   src: '../fonts/Mtcorsva.ttf';
 }
 
 input {  
-  font-family: 'Monotype Corsiva';
+  font-family: 'Monotype Corsiva', 'Times New Roman', Times, serif;
   src: '../fonts/Mtcorsva.ttf';
 }
