--- a/src/Header/HeaderAuth.css
+++ b/src/Header/HeaderAuth.css
@@ -47,3 +47,12 @@
     outline-offset: 0em;
     font-size: 22px;
 }
+
+.greetings-header-text {
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    font-size: 34px;
+    font-weight: bold;
+}
