--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,24 @@ input {
   font-family: 'Monotype Corsiva', 'Times New Roman', Times, serif;
   src: url(./fonts/Mtcorsva.ttf);
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.8); 
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgba(37, 62, 3, 1); 
+  box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8); 
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(37, 62, 3, 1); 
+}
