--- a/src/Body/HabitRemove.css
+++ b/src/Body/HabitRemove.css
@@ -1,6 +1,6 @@
 .remove {
-    width: 1.1em;
-    height: 1.1em;
+    width: 1.7em;
+    height: 1.7em;
     margin-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
@@ -9,7 +9,8 @@
     border-color: #a9bd2600;
     background-color: #a9bd2600;
     background-image: url("../img/remove.svg");
-    background-size: 1.1em 1.1em;
+    background-size: 1.3em 1.3em;
+    background-position: center center;
 }
 
 .remove:hover {
