--- a/src/Header/HeaderAuth.css
+++ b/src/Header/HeaderAuth.css
@@ -40,6 +40,7 @@
     border-radius: 0.5em;
     border: 0em;
     height: 35px;
+    width: 210px;
     margin-top: 10px;
     margin-left: 5px;
     margin-right: 5px;
